Skip pip-compile in CI.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,11 @@ envlist =
   py27
   py35
 
+[travis]
+python =
+  2.7: py27
+  3.5: py35
+
 [testenv]
 deps =
   -r{toxinidir}/tests/requirements-{envname}.txt
@@ -16,7 +21,7 @@ commands =
   coverage html
   coverage report -m --fail-under 100
 
-[testenv:py27-deps]
+[testenv:py27.deps]
 basepython = python2.7
 deps =
   pip-tools==1.9.0
@@ -24,7 +29,7 @@ changedir = {toxinidir}/tests/
 commands =
   pip-compile requirements.in -o requirements-py27.txt
 
-[testenv:py35-deps]
+[testenv:py35.deps]
 basepython = python3.5
 deps =
   pip-tools==1.9.0
