--- a/tests/requirements-py27.txt
+++ b/tests/requirements-py27.txt
@@ -4,17 +4,24 @@
 #
 #    pip-compile --output-file requirements-py27.txt requirements.in
 #
+attrs==16.3.0             # via pytest-docker
+certifi==2017.4.17        # via requests
+chardet==3.0.4            # via requests
 configparser==3.5.0       # via flake8
 coverage==4.4.1
 docutils==0.13.1
 enum34==1.1.6             # via flake8
 flake8==3.3.0
 funcsigs==1.0.2           # via mock
+idna==2.5                 # via requests
 mccabe==0.6.1             # via flake8
 mock==2.0.0
 pbr==3.1.1                # via mock
 py==1.4.34                # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.5.0           # via flake8
+pytest-docker==0.5.0
 pytest==3.1.2
+requests==2.18.1
 six==1.10.0               # via mock
+urllib3==1.21.1           # via requests
