--- a/tests/requirements-py35.txt
+++ b/tests/requirements-py35.txt
@@ -4,14 +4,21 @@
 #
 #    pip-compile --output-file requirements-py35.txt requirements.in
 #
+attrs==16.3.0             # via pytest-docker
+certifi==2017.4.17        # via requests
+chardet==3.0.4            # via requests
 coverage==4.4.1
 docutils==0.13.1
 flake8==3.3.0
+idna==2.5                 # via requests
 mccabe==0.6.1             # via flake8
 mock==2.0.0
 pbr==3.1.1                # via mock
 py==1.4.34                # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.5.0           # via flake8
+pytest-docker==0.5.0
 pytest==3.1.2
+requests==2.18.1
 six==1.10.0               # via mock
+urllib3==1.21.1           # via requests
