Initial Grafana push-pull commands.

--- a/tox.ini
+++ b/tox.ini
@@ -13,11 +13,13 @@ python =
 [testenv]
 deps =
   -r{toxinidir}/tests/requirements-{envname}.txt
+passenv =
+  DOCKER_*
 commands =
   python setup.py check -r -s
   flake8 src/dashex/ tests/
   coverage erase
-  coverage run -m pytest tests/
+  coverage run -m pytest {posargs:tests/}
   coverage html
   coverage report -m --fail-under 100
 
